--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -1,8 +1,9 @@
 ---
 ---
 <!-- _layouts/bib.html -->
-      <div class="row">
-        <div class="col-sm-2 {% if entry.preview %}preview{% else %}abbr{% endif %}">
+      <div>
+      [//]: # <div class="row">
+      [//]: #  <div class="col-sm-2 {% if entry.preview %}preview{% else %}abbr{% endif %}">
         {%- if entry.preview -%}
           {% if entry.preview contains '://' -%}
           <img class="preview z-depth-1 rounded" src="{{ entry.preview }}">
@@ -27,7 +28,8 @@
         </div>
 
         <!-- Entry bib key -->
-        <div id="{{entry.key}}" class="col-sm-8">
+        [//]: # <div id="{{entry.key}}" class="col-sm-8">
+        <div id="{{entry.key}}">
         <!-- Title -->
         <div class="title">{{entry.title}}</div>
         <!-- Author -->
