--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -73,7 +73,7 @@
         {%- elsif thesis contains entry.type -%}
             <em>{{entry.school}}</em>
         {%- endif %}
-        {%- comment -%} {{ entry.year }} {%- endcomment -%}
+        {{ entry.year }}
     </div>
 
     <div class="periodical">
