--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -2,154 +2,134 @@
 ---
 <!-- _layouts/bib.html -->
 
-<div id="{{entry.key}}" class="publication-entry">
-    {%- if entry.preview -%}
-        {% if entry.preview contains '://' -%}
-            <img class="preview z-depth-1 rounded" src="{{ entry.preview }}">
-        {%- else -%}
-            {%- assign entry_path = entry.preview | prepend: '/assets/img/publication_preview/' -%}
-            {% include figure.html path=entry_path class="preview z-depth-1 rounded" alt=entry.preview -%}
-        {%- endif -%}
-    {%- elsif entry.abbr -%}
-        {%- if site.data.venues[entry.abbr] -%}
-            {%- assign venue_style = nil -%}
-            {%- if site.data.venues[entry.abbr].color != blank -%}
-                {%- assign venue_style = site.data.venues[entry.abbr].color | prepend: 'style="background-color:' | append: '"' -%}
+<ol class="publication-list">
+    {% for entry in site.scholar.bibliography %}
+    <li class="publication-entry" id="{{entry.key}}">
+        
+        {%- if entry.preview -%}
+            {% if entry.preview contains '://' -%}
+                <img class="preview z-depth-1 rounded" src="{{ entry.preview }}">
+            {%- else -%}
+                {%- assign entry_path = entry.preview | prepend: '/assets/img/publication_preview/' -%}
+                {% include figure.html path=entry_path class="preview z-depth-1 rounded" alt=entry.preview -%}
             {%- endif -%}
-            <abbr class="badge" {% if venue_style %}{{venue_style}}{% endif %}>
-                <a href="{{site.data.venues[entry.abbr].url}}">{{entry.abbr}}</a>
-            </abbr>
-        {%- else -%}
-            <abbr class="badge">{{entry.abbr}}</abbr>
-        {%- endif -%}
-    {%- endif -%}
-
-    <!-- Entry Title -->
-    <div class="title">{{entry.title}}</div>
-
-    <!-- Author List -->
-    <div class="author">
-        {% assign author_array_size = entry.author_array | size %}
-        {% assign author_array_limit = author_array_size %}
-        {%- if site.max_author_limit and author_array_size > site.max_author_limit %}
-            {% assign author_array_limit = site.max_author_limit %}
-        {% endif %}
-
-        {%- for author in entry.author_array limit: author_array_limit -%}
-            {%- assign author_is_self = false -%}
-            {%- assign author_last_name = author.last | remove: "¶" | remove: "&" | remove: "*" | remove: "†" | remove: "^" -%}
-
-            {%- if site.scholar.last_name contains author_last_name -%}
-                {%- if site.scholar.first_name contains author.first -%}
-                    {%- assign author_is_self = true -%}
+        {%- elsif entry.abbr -%}
+            {%- if site.data.venues[entry.abbr] -%}
+                {%- assign venue_style = nil -%}
+                {%- if site.data.venues[entry.abbr].color != blank -%}
+                    {%- assign venue_style = site.data.venues[entry.abbr].color | prepend: 'style="background-color:' | append: '"' -%}
                 {%- endif -%}
-            {%- endif -%}
-
-            {%- if forloop.first == false -%},&nbsp;{%- endif -%}
-            {%- if forloop.last and author_array_limit == author_array_size -%}and&nbsp;{%- endif -%}
-
-            {%- if author_is_self -%}
-                <em>{{author.first}} {{author.last}}</em>
+                <abbr class="badge" {% if venue_style %}{{venue_style}}{% endif %}>
+                    <a href="{{site.data.venues[entry.abbr].url}}">{{entry.abbr}}</a>
+                </abbr>
             {%- else -%}
-                {{author.first}} {{author.last}}
+                <abbr class="badge">{{entry.abbr}}</abbr>
             {%- endif -%}
-        {%- endfor -%}
-
-        {%- assign more_authors = author_array_size | minus: author_array_limit -%}
-        {%- if more_authors > 0 -%}
-            , and <span class="more-authors">{{ more_authors }} more authors</span>
         {%- endif -%}
-    </div>
 
-    <!-- Journal/Conference & Year -->
-    {% assign proceedings = "inproceedings,incollection" | split: ',' %}
-    {% assign thesis = "thesis,mastersthesis,phdthesis" | split: ',' %}
+        <!-- Entry Title -->
+        <strong>{{entry.title}}</strong>
+        <br>
 
-    <div class="periodical">
+        <!-- Author List -->
+        {%- for author in entry.author_array -%}
+            {{ author.first }} {{ author.last }}{% unless forloop.last %}, {% endunless %}
+        {%- endfor -%}
+        <br>
+
+        <!-- Journal/Conference & Year -->
+        {% assign proceedings = "inproceedings,incollection" | split: ',' %}
+        {% assign thesis = "thesis,mastersthesis,phdthesis" | split: ',' %}
+
+        <em>
         {% if entry.type == "article" -%}
-            <em>{{entry.journal}}</em>
+            {{entry.journal}}
         {%- elsif proceedings contains entry.type -%}
-            <em>In {{entry.booktitle}}</em>
+            In {{entry.booktitle}}
         {%- elsif thesis contains entry.type -%}
-            <em>{{entry.school}}</em>
-        {%- endif %}
-        {{ entry.year }}
-    </div>
+            {{entry.school}}
+        {%- endif -%}
+        </em>
+        {% if entry.year %} ({{ entry.year }}){% endif %}
+        
+        <!-- Additional Information (if available) -->
+        {%- if entry.volume %}, <em>{{ entry.volume }}</em>{% endif -%}
+        {%- if entry.pages %}, {{ entry.pages }}{% endif -%}
+        {%- if entry.note %}, {{ entry.note }}{% endif -%}
+        <br>
 
-    <div class="periodical">
-        {{ entry.note | strip }}
-    </div>
-
-    <!-- Links/Buttons -->
-    <div class="links">
-        {%- if entry.abstract %}
-            <a class="abstract btn btn-sm z-depth-0" role="button">Abs</a>
-        {%- endif %}
-        {%- if entry.arxiv %}
-            <a href="http://arxiv.org/abs/{{ entry.arxiv }}" class="btn btn-sm z-depth-0" role="button">arXiv</a>
-        {%- endif %}
-        {%- if entry.bibtex_show %}
-            <a class="bibtex btn btn-sm z-depth-0" role="button">Bib</a>
-        {%- endif %}
-        {%- if entry.html %}
-            <a href="{{ entry.html }}" class="btn btn-sm z-depth-0" role="button">HTML</a>
-        {%- endif %}
-        {%- if entry.pdf %}
-            {% if entry.pdf contains '://' -%}
-                <a href="{{ entry.pdf }}" class="btn btn-sm z-depth-0" role="button">PDF</a>
-            {%- else -%}
-                <a href="{{ entry.pdf | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">PDF</a>
+        <!-- Links/Buttons -->
+        <div class="links">
+            {%- if entry.abstract %}
+                <a class="abstract btn btn-sm z-depth-0" role="button">Abs</a>
             {%- endif %}
-        {%- endif %}
-        {%- if entry.website %}
-            <a href="{{ entry.website }}" class="btn btn-sm z-depth-0" role="button">Website</a>
-        {%- endif %}
-    </div>
+            {%- if entry.arxiv %}
+                <a href="http://arxiv.org/abs/{{ entry.arxiv }}" class="btn btn-sm z-depth-0" role="button">arXiv</a>
+            {%- endif %}
+            {%- if entry.bibtex_show %}
+                <a class="bibtex btn btn-sm z-depth-0" role="button">Bib</a>
+            {%- endif %}
+            {%- if entry.html %}
+                <a href="{{ entry.html }}" class="btn btn-sm z-depth-0" role="button">HTML</a>
+            {%- endif %}
+            {%- if entry.pdf %}
+                {% if entry.pdf contains '://' -%}
+                    <a href="{{ entry.pdf }}" class="btn btn-sm z-depth-0" role="button">PDF</a>
+                {%- else -%}
+                    <a href="{{ entry.pdf | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">PDF</a>
+                {%- endif %}
+            {%- endif %}
+            {%- if entry.website %}
+                <a href="{{ entry.website }}" class="btn btn-sm z-depth-0" role="button">Website</a>
+            {%- endif %}
+        </div>
 
-    {% if site.badges %}
-    <div class="badges">
-        {%- if site.badges.altmetric_badge %}
-            <span class="altmetric-embed" data-hide-no-mentions="true" data-hide-less-than="15" data-badge-type="2" data-badge-popover="right"
-                {% if entry.eprint %}
-                    data-arxiv-id="{{ entry.eprint }}"
-                {% elsif entry.doi %}
-                    data-doi="{{ entry.doi }}"
-                {% elsif entry.altmetric %}
-                    data-altmetric-id="{{ entry.altmetric }}"
-                {% elsif entry.pmid %}
-                    data-pmid="{{ entry.pmid }}"
-                {% elsif entry.isbn %}
-                    data-isbn="{{ entry.isbn }}"
-                {% endif %}
-            ></span>
+        {% if site.badges %}
+        <div class="badges">
+            {%- if site.badges.altmetric_badge %}
+                <span class="altmetric-embed" data-hide-no-mentions="true" data-hide-less-than="15" data-badge-type="2" data-badge-popover="right"
+                    {% if entry.eprint %}
+                        data-arxiv-id="{{ entry.eprint }}"
+                    {% elsif entry.doi %}
+                        data-doi="{{ entry.doi }}"
+                    {% elsif entry.altmetric %}
+                        data-altmetric-id="{{ entry.altmetric }}"
+                    {% elsif entry.pmid %}
+                        data-pmid="{{ entry.pmid }}"
+                    {% elsif entry.isbn %}
+                        data-isbn="{{ entry.isbn }}"
+                    {% endif %}
+                ></span>
+            {%- endif %}
+            {%- if site.badges.dimensions_badge %}
+                <span class="__dimensions_badge_embed__"
+                    {% if entry.doi %}
+                        data-doi="{{ entry.doi }}"
+                    {% else if entry.pmid %}
+                        data-pmid="{{ entry.pmid }}"
+                    {% else %}
+                        data-id="{{ entry.dimensions }}"
+                    {% endif %}
+                    data-hide-zero-citations="true" data-style="small_rectangle" data-legend="hover-right" style="margin-bottom: 3px;">
+                </span>
+            {%- endif %}
+        </div>
         {%- endif %}
-        {%- if site.badges.dimensions_badge %}
-            <span class="__dimensions_badge_embed__"
-                {% if entry.doi %}
-                    data-doi="{{ entry.doi }}"
-                {% else if entry.pmid %}
-                    data-pmid="{{ entry.pmid }}"
-                {% else %}
-                    data-id="{{ entry.dimensions }}"
-                {% endif %}
-                data-hide-zero-citations="true" data-style="small_rectangle" data-legend="hover-right" style="margin-bottom: 3px;">
-            </span>
-        {%- endif %}
-    </div>
-    {%- endif %}
 
-    {%- if entry.abstract -%}
-    <!-- Hidden Abstract Block -->
-    <div class="abstract hidden">
-        <p>{{ entry.abstract }}</p>
-    </div>
-    {%- endif -%}
+        {%- if entry.abstract -%}
+        <!-- Hidden Abstract Block -->
+        <div class="abstract hidden">
+            <p>{{ entry.abstract }}</p>
+        </div>
+        {%- endif -%}
 
-    {%- if entry.bibtex_show -%}
-    <!-- Hidden BibTeX Block -->
-    <div class="bibtex hidden">
-        {% highlight bibtex %}{{ entry.bibtex | hideCustomBibtex }}{% endhighlight %}
-    </div>
-    {%- endif -%}
+        {%- if entry.bibtex_show -%}
+        <!-- Hidden BibTeX Block -->
+        <div class="bibtex hidden">
+            {% highlight bibtex %}{{ entry.bibtex | hideCustomBibtex }}{% endhighlight %}
+        </div>
+        {%- endif -%}
 
-</div> <!-- Correctly closed div -->
+    </li>  <!-- Correctly closed list item -->
+    {% endfor %}
+</ol>
