--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -13,3 +13,9 @@ $max-content-width: {{ site.max_width }};
   "base",
   "distill"
 ;
+
+
+.publication-item.custom-width {
+  width: 50%; /* Adjust this value to control the width */
+  box-sizing: border-box; /* Ensure padding and border are included in the width */
+}
