--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -27,7 +27,7 @@
         </div> -->
 
         <!-- Entry bib key -->
-        <div id="{{entry.key}}" class="col-sm-8" style="width: 90%; box-sizing=border-box;">
+        <div id="{{entry.key}}" class="col-sm-8 publication-item custom-width">
         <!-- Title -->
         <div class="title">{{entry.title}}</div>
         <!-- Author -->
