--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -1,7 +1,7 @@
 ---
 ---
 <!-- _layouts/bib.html -->
-      <div class="row">
+      <div class="row publication-item custom-width">
 <!--       <div class="col-sm-2 {% if entry.preview %}preview{% else %}abbr{% endif %}">
         {%- if entry.preview -%}
           {% if entry.preview contains '://' -%}
@@ -27,7 +27,7 @@
         </div> -->
 
         <!-- Entry bib key -->
-        <div id="{{entry.key}}" class="col-sm-8 publication-item custom-width">
+        <div id="{{entry.key}}" class="col-sm-8">
         <!-- Title -->
         <div class="title">{{entry.title}}</div>
         <!-- Author -->
